Bug 81031 - FILEOPEN: DOCX VML Shape: image lost on import
Summary: FILEOPEN: DOCX VML Shape: image lost on import
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Vinaya Mandke
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-08 05:43 UTC by Vinaya Mandke
Modified: 2014-07-15 15:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Optimized file (24.67 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-08 05:43 UTC, Vinaya Mandke
Details
Issue File (1.16 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-08 05:44 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-07-08 05:43:02 UTC
Steps to reproduce:

1. Open issue file in MS Word.
2. Open issue file in LO.

Observe that an image is lost on importing in LO.

RCA::

=> The file also has numPicBullets in /word/numbering.xml which cause the vml shape (image) to not render.
Comment 1 Vinaya Mandke 2014-07-08 05:43:43 UTC
Created attachment 102410 [details]
Optimized file
Comment 2 Vinaya Mandke 2014-07-08 05:44:00 UTC
Created attachment 102411 [details]
Issue File
Comment 3 Jorendc 2014-07-08 11:22:24 UTC
Synerzip -> NEW
Comment 4 Commit Notification 2014-07-15 09:55:07 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d5b053436eebac00948e95d64a87e150d195c07

DOCX FILEOPEN VML Shape (image) is lost on import fdo#81031



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.