DOCX FILEOPEN VML Shape (image) is lost on import fdo#81031

ShapeContextHandler::getDrawingShapeContext mxDrawingShapeContext is set once and never reset.
So in a file which has numPicBullets and vml shapes in document.xml there is a problem.
First the fragment path is set as word/numbering.xml.
But when msRelationFragmentPath changes to word/document.xml,
mxDrawingShapeContext is not reset and hence the relationships are not resolved.

Change-Id: I4a1401103797972731257145430f2048b94a04bc